@@ -177,6 +177,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3803) Fix links on Special:Wantedcategories with miser mode off
 * Fix Special:BrokenRedirects on MySQL 5.0
 * (bug 3807) Fix 'all' in namespaces drop-down on contribs, rc
+* Fail gracefully on invalid namespace in Special:Newpages
 
 
 === Caveats ===
